2004-08-04  Florian Boor  <florian.boor@kernelconcepts.de>

    * Released Version 0.24
    
    * editing.c, *.xml, structure.c: Support for name detail fields hidden in 
                                     main window.
    * contacts-layout.xml: Fixed name field.
    * editing.c: Support for multiple name fields.
    * main.c: Run editor if return key is pressed.    

2004-07-30  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: match_for_search(): Implemeted improved search algorithm.
    * db.c: Load given name and family name into person struct (for search).
    * main.c: Some formating fixes.
    * editing.c: Automatic update of name field.
    * editing.c, proto.h: Added update routine.
    * namedetail.c: Finished implementing detail editor.
    * Makefile: Updated version number to 0.24.

2004-07-29  Florian Boor  <florian.boor@kernelconcepts.de>

    * contacts-layout-bigscreen.xml: Added fields for name details.
    * namedetail.c: New file, started implementing name detail editor.

2004-07-28  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Several changes to keyboard control, escape clears search.
    * editing.c: Improved setting of default window size.
    * editing.c: Keyboard control: Enter saves, escape discards changes.

2004-07-24  Florian Boor  <florian.boor@kernelconcepts.de>

	* editing.c: Some improvement in dialog layout.
	* contacts-layout.xml: Optimisations for small screens, split up in "home"
	                       and "work" address page. 

2004-07-23  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Fixed bug in screen size detection.

2004-07-16  Florian Boor  <florian.boor@kernelconcepts.de>

    * Version 0.23 released

2004-07-14  Florian Boor  <florian.boor@kernelconcepts.de>
    
    * main.c: Activate search field whenever main window is activated.
    * main.c: Added command line switch "-n" to turn off configuration dialog.